--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,25 @@
 {% extends "layout.html" %} {% block content %}
-<h1>Home Page</h1>
+
+<div class="jumbotron">
+    <div class="row">
+        <div class="col-lg-5">
+            <img src="../static/assets/1.png" class="img-responsive" style="width:100%">
+        </div>
+
+        <div class="col-lg-6">
+            <div style="margin-top : 15%">
+                <h1 class="display-4">Hola!</h1>
+                <p class="lead">Language is not a barrier , if we communicate from our heart💓 </p>
+                <p class="lead">Hodge Podge is a platform which provides users to communicate with anyone in their preffered language eliminating the cultural differences </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="/register" role="button">Create Account</a>
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
 {% endblock content %}
