--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layouts/layout.html" %} 
+
+{% block content %}
 
 <div class="jumbotron">
     <div class="row">
