--- a/app/templates/layouts/layout.html
+++ b/app/templates/layouts/layout.html
@@ -10,29 +10,7 @@
 </head>
 
 <body>
-    <!-- NavBar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Hodge Podge</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home
-                <span class="sr-only">(current)</span>
-              </a>
-                </li>
-
-            </ul>
-            <ul class="navbar-nav my-2 my-lg-0 ">
-                <a class="btn btn-primary mr-sm-2 " href="/">Log in</a>
-                <a class="btn btn-danger my-2 my-sm-0 " href="/">Sign Up</a>
-            </ul>
-        </div>
-    </nav>
-    <!-- NavBar end -->
+    {% include "includes/navbar.html" %}
 
     <div>
         {% block content %} {% endblock content %}
