--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 <!-- NavBar start -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Hodge Podge</a>
+    <a class="navbar-brand" href="/">HodgePodge</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,15 +8,17 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home
-            <span class="sr-only">(current)</span>
-          </a>
+                {% if current_user.is_authenticated %}
+                <a class="nav-link" href="/home">Home</a>{% else %}
+                <a class="btn btn-danger my-2 my-sm-0 " href="/ ">Home</a> {% endif %}
             </li>
 
         </ul>
         <ul class="navbar-nav my-2 my-lg-0 ">
-            <a class="btn btn-primary mr-sm-2 " href="/">Log in</a>
-            <a class="btn btn-danger my-2 my-sm-0 " href="/">Sign Up</a>
+            {% if current_user.is_authenticated %}
+            <a class="btn btn-primary mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Log Out</a> {% else %}
+            <a class="btn btn-primary mr-sm-2 " href="/login ">Log in</a>
+            <a class="btn btn-danger my-2 my-sm-0 " href="/register ">Sign Up</a> {% endif %}
         </ul>
     </div>
 </nav>
