--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,15 +2,136 @@
 
 <div class="jumbotron">
     <div class="row">
-        <div class="col-lg-5">
+        <!-- <div class="col-lg-5">
             <img src="../static/assets/1.png" class="img-responsive" style="width:100%">
-        </div>
+        </div> -->
 
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
             <div style="margin-top : 15%">
-                <h1 class="display-4">Hola!{{current_user.username }}</h1>
+                <h1 class="display-4">Hola! {{current_user.username }}</h1>
                 </p>
             </div>
+        </div> -->
+
+        <!-- component -->
+        <div class="w-full h-32" style="background-color: #449388"></div>
+
+            <div class="container mx-auto" style="margin-top: -128px;">
+                <div class="py-6 h-screen">
+                    <div class="flex border border-grey rounded shadow-lg h-full">
+
+                        <!-- Left -->
+                        <div class="w-1/3 border flex flex-col">
+
+                            <!-- Header -->
+                            <div class="py-2 px-3 bg-grey-lighter flex flex-row justify-between items-center">
+                                <div>
+                                    <img class="w-10 h-10 rounded-full" src="http://andressantibanez.com/res/avatar.png"/>
+                                </div>
+
+                                <div class="flex">
+                                    <h2>{{ current_user.username }}</h2>
+                                </div>
+                            </div>
+
+                            <!-- Search
+                            <div class="py-2 px-2 bg-grey-lightest">
+                                <input type="text" class="w-full px-2 py-2 text-sm" placeholder="Search or start new chat"/>
+                            </div> -->
+
+                            <!-- Contacts -->
+                            <div class="bg-grey-lighter flex-1 overflow-auto">
+
+                                <div class="bg-white px-3 flex items-center hover:bg-grey-lighter cursor-pointer">
+                                    <div>
+                                        <img class="h-12 w-12 rounded-full"
+                                            src="https://www.biography.com/.image/t_share/MTE5NDg0MDU1MTIyMTE4MTU5/arnold-schwarzenegger-9476355-1-402.jpg"/>
+                                    </div>
+                                    <div class="ml-4 flex-1 border-b border-grey-lighter py-4">
+                                        <div class="flex items-bottom justify-between">
+                                            <p class="text-grey-darkest">
+                                                Arnold Schwarzenegger
+                                            </p>
+                                            <p class="text-xs text-grey-darkest">
+                                                12:45 pm
+                                            </p>
+                                        </div>
+                                        <p class="text-grey-dark mt-1 text-sm">
+                                            I'll be back
+                                        </p>
+                                    </div>
+                                </div>
+                                
+                            </div>
+
+                        </div>
+
+
+                        <!-- Right -->
+                        <div class="w-2/3 border flex flex-col">
+
+                            <!-- Header -->
+                            <div class="py-2 px-3 bg-grey-lighter flex flex-row justify-between items-center">
+                                <div class="flex items-center">
+                                    <div>
+                                        <img class="w-10 h-10 rounded-full" src="https://darrenjameseeley.files.wordpress.com/2014/09/expendables3.jpeg"/>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p class="text-grey-darkest">
+                                            New Movie! Expendables 4
+                                        </p>
+                                        <p class="text-grey-darker text-xs mt-1">
+                                            Andrés, Tom, Harrison, Arnold, Sylvester
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Messages -->
+                            <div class="flex-1 overflow-auto" style="background-color: #DAD3CC">
+                                <div class="py-2 px-3">
+
+                                    <div class="flex mb-2">
+                                        <div class="rounded py-2 px-3" style="background-color: #F2F2F2">
+                                            <p class="text-sm text-teal">
+                                                Sylverter Stallone
+                                            </p>
+                                            <p class="text-sm mt-1">
+                                                Hi everyone! Glad you could join! I am making a new movie.
+                                            </p>
+                                            <p class="text-right text-xs text-grey-dark mt-1">
+                                                12:45 pm
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="flex justify-end mb-2">
+                                        <div class="rounded py-2 px-3" style="background-color: #E2F7CB">
+                                            <p class="text-sm mt-1">
+                                                Hi guys.
+                                            </p>
+                                            <p class="text-right text-xs text-grey-dark mt-1">
+                                                12:45 pm
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            <!-- Input -->
+                            <div class="bg-grey-lighter px-4 py-4 flex items-center">
+                                <div class="flex-1 mx-4">
+                                    <input class="w-full border rounded px-2 py-2" type="text"/>
+                                </div>
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="#263238" fill-opacity=".45" d="M11.999 14.942c2.001 0 3.531-1.53 3.531-3.531V4.35c0-2.001-1.53-3.531-3.531-3.531S8.469 2.35 8.469 4.35v7.061c0 2.001 1.53 3.531 3.53 3.531zm6.238-3.53c0 3.531-2.942 6.002-6.237 6.002s-6.237-2.471-6.237-6.002H3.761c0 4.001 3.178 7.297 7.061 7.885v3.884h2.354v-3.884c3.884-.588 7.061-3.884 7.061-7.885h-2z"></path></svg>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
         </div>
 
     </div>
