--- a/app/templates/layouts/layout.html
+++ b/app/templates/layouts/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
     <title>Hodge Podge</title>
 </head>
+{% include "includes/navbar.html" %}
 
 <body>
 
