--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "/layouts/layout.html" %} {% block content %}
 
 <div class="jumbotron">
     <div class="row">
