--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -16,7 +16,7 @@
         </ul>
         <ul class="navbar-nav my-2 my-lg-0 ">
             {% if current_user.is_authenticated %}
-            <a class="nav-link mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Edit Profile</a>
+            <a class="nav-link mr-sm-2 " href="{{ url_for( 'users.account') }} ">Edit Profile</a>
             <a class="nav-link mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Find Friends</a>
             <a class="btn btn-primary mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Log Out</a> {% else %}
             <a class="btn btn-primary mr-sm-2 " href="/login ">Log in</a>
