--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,30 +1,39 @@
 {% extends "layouts/layout.html" %} {% block content %}
 <div class="jumbotron">
+
     <div class="row">
         <div class="col-lg-4">
-            <img src="./static/assets/1.png" class="img-responsive" style="width:100% ">
+            <img src="{{ image_file }}" class="img-responsive p-3" style="width:100% ; height:18rem;">
+            <div class="card border-info mt-5 bg-gradient-primary" style="max-width: 100%">
+                <div class="card-body bg-primary">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h5 class="card-title text-white">👦{{current_user.username }}</h5>
+                            <h5 class="card-text text-white">📧{{current_user.email }}</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-1">
 
         </div>
         <div class="col-lg-6 mt-4">
-            <h3 class="">My Details👋</h3>
-            <div class="card border-info mt-5 bg-gradient-primary" style="max-width: 100%">
-                <div class="card-body ">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <h5 class="card-title">👦User Name : </h5>
-                            <h5 class="card-text ">📧 Email :</h5>
-                        </div>
-                        <div class="col-lg-6">
-                            <h5 class="card-title">{{current_user.username }}</h5>
-                            <h5 class="card-text">{{current_user.email }}</h5>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
+            <h3>My Contacts👋</h3>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th class="table-info" scope="col">Friends</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for friend in friends %}
+                    <tr>
+                        <th scope="row">{{friend.username}}</th>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
