--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,8 @@
 <div class="m-4 p-0">
     <div class="row">
         <div class="col-lg-3">
-            <div class="row ">
-                <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="row p-2">
+                <div class="card border-primary mb-3" style="max-width: 100% ;" >
                     <div class="row">
                         <div class="col-lg-5">
                             <img src="{{ image_file }}" class="img-responsive " style="width:100% ">
@@ -16,6 +16,7 @@
                                 joinRoom();
                             </script>
                             <p class="card-text">📧{{current_user.email }}</p>
+                            <div id="google_translate_element"></div>
                         </div>
                     </div>
 
