--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-4 ">
             <div class="row">
-                <img src="{{ image_file }}" alt="User" class="img-responsive p-3" style="width:100% ; height:22rem;">
+                <img src="{{ image_file }}" alt="{{current_user.username[0]}}" class="img-responsive p-3" style="width:100% ; height:22rem;">
             </div>
             <div class="row">
                 <div class="col-lg-12 mt-3">
