--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,47 +3,52 @@
 <div class="m-4 p-0">
     <div class="row">
         <div class="col-lg-3">
-            <div class="row p-2">
-                <div class="card border-primary mb-3" style="max-width: 100% ;" >
+            <div class="row p-2" style="max-width: 100% ;">
+                <div class="card border-primary mb-3">
                     <div class="row">
-                        <div class="col-lg-5">
+                        <div class="col-lg-4 mt-1 ">
                             <img src="{{ image_file }}" class="img-responsive " style="width:100% ">
                         </div>
-                        <div class="col-lg-7 mt-4">
+                        <div class="col-lg-8 mt-2">
                             <p class="card-title ">👦{{current_user.username }}</p>
                             <script>
                                 localStorage.setItem("currUsername", "{{current_user.username }}")
                                 joinRoom();
                             </script>
                             <p class="card-text">📧{{current_user.email }}</p>
+                        </div>
+                        <div class="col-lg-12" style="display:flex ; justify-content:cener;align-items:left">
                             <div id="google_translate_element"></div>
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="row p-2">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th class="table-info" scope="col">Friends</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for friend in friends -%}
-                        <tr>
-                            <th scope="row" onclick=chatapp("{{ friend.username }}")>
-                                {{ friend.username | string }}
-                            </th>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+
+            <div class="row p-0">
+                <div class="col-lg-12">
+                    <h6 class="text-center">My Contacts</h6>
+                </div>
+                <div class="col-lg-12 p-0 " style="max-width: 100% ; height: 50vh ; overflow: auto;  ">
+
+                    <table class="table table-hover bg-info">
+                        <tbody>
+                            {% for friend in friends -%}
+                            <tr class="table-light">
+                                <th scope="row" onclick=chatapp( "{{ friend.username }}")>
+                                    {{ friend.username | string }}
+                                </th>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
 
         <div class="col-lg-9">
-            <div class="card border-primary mb-3" style="max-width: 100% ; height : 80vh">
+            <div class="card border-primary" style="max-width: 100% ; height : 80vh ">
                 <div class="card-header" id="chat-header">Friend</div>
                 <div class="card-body" style="position: absolute ; bottom : 10px ;width : 100%">
 
