--- a/app/templates/layouts/layout.html
+++ b/app/templates/layouts/layout.html
@@ -20,11 +20,11 @@
 
     {% block content %} {% endblock content %}
 
-    <blockquote class="blockquote text-center ">
-        <footer class="blockquote-footer "><i>Made with ❤️ by Divya Rao and Yogesh Upadhyay</i></footer>
+    <blockquote class="blockquote text-center">
+        <footer class="blockquote-footer "><i>Made with 💕 by © 2021 Divya Rao and Yogesh Upadhyay</i></footer>
     </blockquote>
 
-    
+
 </body>
 
 </html>
