--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 <!-- NavBar start -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">HodgePodge</a>
+    <a class="navbar-brand" href="/home">HodgePodge</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,7 +17,7 @@
         <ul class="navbar-nav my-2 my-lg-0 ">
             {% if current_user.is_authenticated %}
             <a class="nav-link mr-sm-2 " href="{{ url_for( 'users.account') }} ">Edit Profile</a>
-            <a class="btn btn-primary mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Log Out</a> {% else %}
+            <a class="nav-link mr-sm-2 " href="{{ url_for( 'users.logout') }} ">Log Out</a> {% else %}
             <a class="btn btn-primary mr-sm-2 " href="/login ">Log in</a>
             <a class="btn btn-danger my-2 my-sm-0 " href="/register ">Sign Up</a> {% endif %}
         </ul>
